# SKSS

./: .gitignore  CMakeLists.txt  README.md
include/: client.hpp  common.hpp  event.hpp  eventcallback.hpp  eventloop.hpp  net.hpp  network.hpp  server.hpp
src/: client.cpp  event.cpp  eventcallback.cpp  eventloop.cpp  net.cpp  network.cpp  server.cpp  skss_service.cpp
test/: connections.py
